--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Dosis', sans-serif;
+  font-family: "Dosis", sans-serif;
   font-size: 16px;
 }
 
@@ -34,7 +34,7 @@ form {
 }
 
 .title {
-  font-family: 'Dosis', sans-serif;
+  font-family: "Dosis", sans-serif;
   display: flex;
   justify-content: center;
   align-content: center;
@@ -46,7 +46,7 @@ form {
   padding: 10px;
   border: 1px solid #eee;
   outline: none;
-  width: 65%;
+  width: 35%;
 }
 
 .inputForm::placeholder {
